RESOLVED FIXED184658
[WPE][GTK] GObject introspection annotation fixes: BackForwardList, NetworkProxySettings
https://bugs.webkit.org/show_bug.cgi?id=184658
Summary [WPE][GTK] GObject introspection annotation fixes: BackForwardList, NetworkPr...
Dylan Simon
Reported 2018-04-16 11:01:20 PDT
The following functions can return NULL but are not marked as (nullable): webkit_back_forward_list_get_current_item webkit_back_forward_list_get_back_item webkit_back_forward_list_get_forward_item webkit_back_forward_list_get_nth_item The @ignoreHosts argument to webkit_network_proxy_settings_new should be marked as (array zero-terminated=1).
Attachments
Patch (3.94 KB, patch)
2018-04-16 11:44 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2018-04-16 11:44:31 PDT
EWS Watchlist
Comment 2 2018-04-16 11:45:56 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 3 2018-04-17 10:13:06 PDT
Comment on attachment 338020 [details] Patch Clearing flags on attachment: 338020 Committed r230718: <https://trac.webkit.org/changeset/230718>
WebKit Commit Bot
Comment 4 2018-04-17 10:13:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.