[WPE][GTK] GObject introspection annotation fixes: BackForwardList, NetworkProxySettings https://bugs.webkit.org/show_bug.cgi?id=184658

Reviewed by Carlos Garcia Campos.

Thanks to Dylan Simon for recommending these annotation fixes.

* UIProcess/API/glib/WebKitBackForwardList.cpp:
* UIProcess/API/glib/WebKitNetworkProxySettings.cpp:


Canonical link: https://commits.webkit.org/200207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230718 268f45cc-cd09-0410-ab3c-d52691b4dbfc